Fix CSS not showing text on iPad

--- a/magi/static/less/mixins/navbar-variant.less
+++ b/magi/static/less/mixins/navbar-variant.less
@@ -88,7 +88,7 @@
 	    }
 	}
 
-	@media (max-width: 768px) {
+	@media (max-width: 767px) {
             // Dropdowns get custom display
 	    .open .dropdown-menu {
 		> .dropdown-header {
@@ -150,10 +150,5 @@
     .dropdown-menu>.active>a:hover {
 	background-color: @navbar-inverse-bg;
 	color: @navbar-inverse-color;
-    }
-    @media (max-width: 768px) {
-	.dropdown-menu>li>a {
-	    color: @navbar-inverse-color;
-	}
     }
 }
